[skip travis]
Fix build error
